Fix layout issues
- Fix sidebar content layout
- Load post layouts in correct order
- Add extra sidebar check

--- a/css/sass/responsive-style.scss
+++ b/css/sass/responsive-style.scss
@@ -639,7 +639,7 @@ main#main {
 	//* Sidebar content ===================*/
 
 	.sidebar-content-page & {
-		@include make-md-column-push(8);
+		@include make-md-column-push(4);
 	}
 
 	//* Content sidebar half ===================*/
